#9 implemented Infermedica.GetInfo method

--- a/APIs/InfermedicaAPI/DemoApp/InfermedicaAPI.Client.Demo.csproj
+++ b/APIs/InfermedicaAPI/DemoApp/InfermedicaAPI.Client.Demo.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InfermedicaAPI\InfermedicaAPI.csproj">
+      <Project>{70AE6EB5-559F-4437-BE3D-5184B0E51B7A}</Project>
+      <Name>InfermedicaAPI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
