--- a/APIs/InfermedicaAPI/InfermedicaAPI/InfermedicaAPI.csproj
+++ b/APIs/InfermedicaAPI/InfermedicaAPI/InfermedicaAPI.csproj
@@ -43,7 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataProviders\InfermedicaDataCache.cs" />
+    <Compile Include="DataProviders\InfermedicaDataProvider.cs" />
+    <Compile Include="Interfaces\IInfermedicaDataProvider.cs" />
     <Compile Include="Infermedica.cs" />
+    <Compile Include="Data\InfermedicaInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
