--- a/APIs/InfermedicaAPI/InfermedicaAPI/InfermedicaAPI.csproj
+++ b/APIs/InfermedicaAPI/InfermedicaAPI/InfermedicaAPI.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="DataProviders\InfermedicaDataCache.cs" />
     <Compile Include="DataProviders\InfermedicaDataProvider.cs" />
+    <Compile Include="Data\InfermedicaCondition.cs" />
     <Compile Include="Interfaces\IInfermedicaDataProvider.cs" />
     <Compile Include="Infermedica.cs" />
     <Compile Include="Data\InfermedicaInfo.cs" />
