#9 added GetRiskFactors() method

--- a/APIs/InfermedicaAPI/InfermedicaAPI/InfermedicaAPI.csproj
+++ b/APIs/InfermedicaAPI/InfermedicaAPI/InfermedicaAPI.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DataProviders\InfermedicaDataProvider.cs" />
     <Compile Include="Data\InfermedicaCondition.cs" />
     <Compile Include="Data\InfermedicaLabTest.cs" />
+    <Compile Include="Data\InfermedicaRiskFactor.cs" />
     <Compile Include="Services\InfermedicaConvert.cs" />
     <Compile Include="Interfaces\IInfermedicaDataProvider.cs" />
     <Compile Include="Infermedica.cs" />
